[gd_scene load_steps=4 format=3 uid="uid://thmapogvyaca"]

[ext_resource type="Script" path="res://Scripts/Goblin.gd" id="1_n4klf"]
[ext_resource type="SpriteFrames" uid="uid://dkcx86lf7gja7" path="res://Anim/Goblin.tres" id="1_rb41a"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5f7jk"]
radius = 16.0
height = 58.0

[node name="Goblin" type="Area2D"]
scale = Vector2(1.3, 1.3)
script = ExtResource("1_n4klf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_rb41a")
animation = &"Main"
autoplay = "Main"
frame_progress = 0.708408

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 8)
shape = SubResource("CapsuleShape2D_5f7jk")

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
